fixed image title margin on mobile

--- a/styles/Project.module.scss
+++ b/styles/Project.module.scss
@@ -79,10 +79,6 @@
         grid-template-columns: 1fr;
     }
 
-    .image-title {
-        margin: 0 0.5rem 1rem 0;
-    }
-
     .image-description-box {
         transition: unset;
         opacity: unset;
